--- a/wrf/cloudbuild.yaml
+++ b/wrf/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
         "-force",
         "-var","project_id=$PROJECT_ID",
         "-var","zone=$_ZONE",
-        "-var","source_image=${_SOURCE_IMAGE}",
+        "-var","source_image_family=${_SOURCE_IMAGE_FAMILY}",
         "-var","source_image_project=${_SOURCE_IMAGE_PROJECT}",
         "-var","subnet=${_SUBNETWORK}",
         "-var","image_name=${_IMAGE_NAME}",
@@ -19,7 +19,7 @@ steps:
 substitutions:
     _ZONE: 'us-central1-c'
     _SUBNETWORK: 'default'
-    _SOURCE_IMAGE: 'schedmd-slurm-20-11-4-hpc-centos-7-2021-03-12-215000'
+    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-hpc-centos-7'
     _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
     _IMAGE_NAME: 'wrf-gcp-centos7-latest'
     _IMAGE_FAMILY: 'wrf-gcp-centos7'
