Fix path reference to packer.json

--- a/wrf/cloudbuild.yaml
+++ b/wrf/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
         "-var","image_name=${_IMAGE_NAME}",
         "-var","image_family=${_IMAGE_FAMILY}",
         "-var","install_root=${_INSTALL_ROOT}",
-        'packer.json']
+        'wrf/packer.json']
   waitFor: ["-"]
 
 
