Switch to schedmd base image based off CentOS 7
* The HPC based VM image enforces hyperthread disabling, which is not
optimal for WRF simulations (in terms of both runtime and cost/simulation).
Instead, we're basing off the SchedMD's CentOS 7 base and incorporating
HPC best practices tuning without disabling hyperthreads

--- a/wrf/cloudbuild.yaml
+++ b/wrf/cloudbuild.yaml
@@ -20,10 +20,10 @@ steps:
 substitutions:
     _ZONE: 'us-central1-c'
     _SUBNETWORK: 'default'
-    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-hpc-centos-7'
+    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-centos-7'
     _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
-    _IMAGE_NAME: 'wrf-gcp-centos7-latest'
-    _IMAGE_FAMILY: 'wrf-gcp-centos7'
+    _IMAGE_NAME: 'wrf-gcp-slurm-gcp-centos7-latest'
+    _IMAGE_FAMILY: 'wrf-gcp-slurm-gcp-centos7'
     _INSTALL_ROOT: '/apps'
 
 timeout : 28800s
