--- a/openfoam/cloudbuild.yaml
+++ b/openfoam/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
         "-var","image_name=${_IMAGE_NAME}",
         "-var","image_family=${_IMAGE_FAMILY}",
         "-var","install_root=${_INSTALL_ROOT}",
-        "-var","slurm_root=${_SLURM_ROOT}"
+        "-var","slurm_root=${_SLURM_ROOT}",
         'wrf/packer.json']
   waitFor: ["-"]
 
@@ -23,9 +23,9 @@ substitutions:
     _SUBNETWORK: 'default'
     _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-centos-7'
     _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
-    _IMAGE_NAME: 'wrf-gcp-slurm-gcp-centos7-latest'
-    _IMAGE_FAMILY: 'wrf-gcp-slurm-gcp-centos7'
+    _IMAGE_NAME: 'openfoam-slurm-gcp-centos7-latest'
+    _IMAGE_FAMILY: 'openfoam-slurm-gcp-centos7'
     _INSTALL_ROOT: '/apps'
-    _SLURM_ROOT: '/usr/local
+    _SLURM_ROOT: '/usr/local'
 
 timeout : 28800s
