Change gromacs default to use standard centos-7 image

--- a/gromacs/cloudbuild.yaml
+++ b/gromacs/cloudbuild.yaml
@@ -13,17 +13,17 @@ steps:
         "-var","image_name=${_IMAGE_NAME}",
         "-var","image_family=${_IMAGE_FAMILY}",
         "-var","install_root=${_INSTALL_ROOT}",
-        'packer.json']
+        'gromacs/packer.json']
   waitFor: ["-"]
 
 
 substitutions:
     _ZONE: 'us-central1-c'
     _SUBNETWORK: 'default'
-    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-hpc-centos-7'
+    _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-centos-7'
     _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
-    _IMAGE_NAME: 'gromacs-centos7-latest'
-    _IMAGE_FAMILY: 'gromacs-centos7'
+    _IMAGE_NAME: 'gromacs-gcp-latest'
+    _IMAGE_FAMILY: 'gromacs-gcp'
     _INSTALL_ROOT: '/apps'
 
 timeout : 28800s
