--- a/singularity/env/fluid-hpc-centos-7-gcc-10-2-0/spack.yaml
+++ b/singularity/env/fluid-hpc-centos-7-gcc-10-2-0/spack.yaml
@@ -13,11 +13,11 @@ spack:
   packages:
     all:
       compiler:
-      - @COMPILER@
+      - gcc@10.2.0
 
       providers:
         mpi:
-          - openmpi
+          - openmpi@4.0.2
 
       target:
       - x86_64
