--- a/gromacs/cloudbuild.yaml
+++ b/gromacs/cloudbuild.yaml
@@ -14,6 +14,9 @@ steps:
         "-var","image_family=${_IMAGE_FAMILY}",
         "-var","install_root=${_INSTALL_ROOT}",
         "-var","slurm_root=${_SLURM_ROOT}",
+        "-var","compiler=${_COMPILER}",
+        "-var","pkg_path=${_PKG_PATH}",
+        "-var","common_path=${_COMMON_PATH}",
         'gromacs/packer.json']
   waitFor: ["-"]
 
@@ -27,5 +30,8 @@ substitutions:
     _IMAGE_FAMILY: 'gromacs-gcp-foss'
     _INSTALL_ROOT: '/apps'
     _SLURM_ROOT: '/usr/local'
+    _COMPILER: 'gcc@9.2.0'
+    _PKG_PATH: "gromacs"
+    _COMMON_PATH: "common"
 
 timeout : 28800s
