--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -22,6 +22,12 @@ spack:
       target:
       - x86_64
 
+
+    wrf:
+      buildable: true
+      compiler:
+      - intel@2021.2.0
+
     autoconf:
       buildable: true
       compiler:
