--- a/wrf/env/fluid-hpc-centos-7-gcc-9-4-0/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-gcc-9-4-0/spack.yaml
@@ -30,7 +30,7 @@ spack:
       buildable: true
       version: 
       - 4.0.5
-      variants: +singularity +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
+      variants: +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
 
     singularity: 
       buildable: true
