Add INSTALL_ROOT variable to environment
* This sets up the installation path and system view correctly for users

--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -1,7 +1,7 @@
 spack:
-  view: /apps/view
+  view: @INSTALL_ROOT@/view
   config:
-    install_tree: /apps/software
+    install_tree: @INSTALL_ROOT@/software
 
   concretization: separately
 
