--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -12,8 +12,7 @@ spack:
   packages:
     all:
       compiler:
-      - intel@2021.2.0 
-
+      - intel@2021.2.0 ^m4@1.4.17
       providers:
         mpi:
           - openmpi
