Force boost to 1.68.0
* https://github.com/spack/spack/issues/16328

--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -20,6 +20,11 @@ spack:
       target:
       - x86_64
 
+    boost: 
+      buildable: true
+      version: 
+      - 1.68.0
+
     m4: 
       buildable: true
       version: 
