Add valgrind installation through yum
* valgrind fails to install with intel compilers

--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -20,6 +20,12 @@ spack:
       target:
       - x86_64
 
+    valgrind:
+      buildable: false
+      externals:
+      - spec: valgrind@3.15.0
+        prefix: /usr
+
     boost: 
       buildable: true
       version: 
