Fix misspelling in spec

--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -23,7 +23,7 @@ spack:
     valgrind:
       buildable: false
       externals:
-      - spec: valgrind@3.15.0+boost~mpi+only64bit+usban
+      - spec: valgrind@3.15.0+boost~mpi+only64bit
         prefix: /usr
 
     boost: 
