--- a/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/wrf/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -58,6 +58,11 @@ spack:
       version: 
       - 4.0.5
       variants: +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
+    openssh:
+      buildable: false
+      externals:
+      - spec: openssh@7.4p1
+        prefix: /usr
     singularity: 
       buildable: true
       version: 
