--- a/openfoam/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
+++ b/openfoam/env/fluid-hpc-centos-7-intel-oneapi-compilers/spack.yaml
@@ -1,7 +1,7 @@
 spack:
-  view: /apps/view
+  view: @INSTALL_ROOT@/view
   config:
-    install_tree: /apps/software
+    install_tree: @INSTALL_ROOT@/software
 
   concretization: separately
 
@@ -13,9 +13,7 @@ spack:
   packages:
     all:
       compiler:
-      - intel@2021.2.0 
-      - gcc@4.8.5
-
+      - intel@2021.2.0
       providers:
         mpi:
           - openmpi
@@ -23,55 +21,59 @@ spack:
       target:
       - x86_64
 
-
-    wrf:
-      buildable: true
-      compiler:
-      - intel@2021.2.0
-
     autoconf:
-      buildable: true
-      compiler:
-      - gcc@4.8.5
-
+      buildable: false
+      externals:
+      - spec: autoconf@2.69
+        prefix: /usr
     automake:
+      buildable: false
+      externals:
+      - spec: automake@1.13.4
+        prefix: /usr
+    bison:
+      buildable: false
+      externals:
+      - spec: bison@3.0.4
+        prefix: /usr
+    boost: 
       buildable: true
-      compiler:
-      - gcc@4.8.5
-
-    libsigsegv:
-      buildable: true
-      compiler:
-      - gcc@4.8.5
-
-    m4:
-      buildable: true
-      compiler:
-      - gcc@4.8.5
-
+      version: 
+      - 1.68.0
     cuda:
       buildable: false
       externals:
       - spec: cuda@11.2.152
         prefix: /usr/local/cuda
-
+    libevent:
+      buildable: false
+      externals:
+      - spec: libevent@2.0.21
+        prefix: /usr
+    m4: 
+      buildable: true
+      version: 
+      - 1.4.17
     openmpi:
       buildable: true
       version: 
       - 4.0.5
       variants: +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
-
     singularity: 
       buildable: true
       version: 
       - 3.7.4
-
     slurm:
       buildable: false
       version: [20-11]
       externals:
       - spec: slurm@20-11
         prefix: /usr/local
+    valgrind:
+      buildable: false
+      externals:
+      - spec: valgrind@3.15.0+boost~mpi+only64bit
+        prefix: /usr
 
 
   
