--- a/singularity/cloudbuild.yaml
+++ b/singularity/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
         "-var","compiler=${_COMPILER}",
         "-var","pkg_path=${_PKG_PATH}",
         "-var","common_path=${_COMMON_PATH}",
-        'singularity/packer.json']
+        '${_PKG_PATH}/packer.json']
   waitFor: ["-"]
 
 
@@ -26,9 +26,9 @@ substitutions:
     _SUBNETWORK: 'default'
     _SOURCE_IMAGE_FAMILY: 'schedmd-slurm-20-11-4-centos-7'
     _SOURCE_IMAGE_PROJECT: 'schedmd-slurm-public'
-    _IMAGE_NAME: 'singularity-fluid-gcp-latest'
-    _IMAGE_FAMILY: 'singularity-fluid-gcp'
-    _INSTALL_ROOT: '/apps'
+    _IMAGE_NAME: 'singularity-gcp-foss-latest'
+    _IMAGE_FAMILY: 'singularity-gcp-foss'
+    _INSTALL_ROOT: '/opt'
     _SLURM_ROOT: '/usr/local'
     _COMPILER: 'gcc@10.2.0'
     _PKG_PATH: "singularity"
