--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -54,6 +54,10 @@ spack:
       externals:
       - spec: libevent@2.0.21
         prefix: /usr
+    libtool: 
+      buildable: true
+      version: 
+      - 2.4.2
     m4: 
       buildable: true
       version: 
