--- a/openfoam/env/spack.yaml
+++ b/openfoam/env/spack.yaml
@@ -62,11 +62,16 @@ spack:
       buildable: true
       version: 
       - 1.4.17
+    ncurses:
+      buildable: false
+      externals:
+      - spec: ncurses@5.9
+        prefix: /usr
     openmpi:
       buildable: true
       version: 
       - 4.0.5
-      variants: +singularity +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
+      variants: +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
     singularity: 
       buildable: true
       version: 
