Consolidate spack package installation into common
* This simplifies application installation and reduces duplicate code
for each package. This does, however, require that new packages are
brought in through spack environments; all packages require a spack.yaml
under an `env/` subdirectory.

--- a/gromacs/cloudbuild.yaml
+++ b/gromacs/cloudbuild.yaml
@@ -13,6 +13,7 @@ steps:
         "-var","image_name=${_IMAGE_NAME}",
         "-var","image_family=${_IMAGE_FAMILY}",
         "-var","install_root=${_INSTALL_ROOT}",
+        "-var","machine_type=${_MACHINE_TYPE}",
         "-var","slurm_root=${_SLURM_ROOT}",
         "-var","target_arch=${_ARCH}",
         "-var","compiler=${_COMPILER}",
@@ -31,9 +32,12 @@ substitutions:
     _IMAGE_FAMILY: 'gromacs-gcp-foss-c2'
     _INSTALL_ROOT: '/opt'
     _SLURM_ROOT: '/usr/local'
-    _COMPILER: 'gcc@9.2.0'
+    _COMPILER: 'gcc@10.2.0'
     _PKG_PATH: "gromacs"
     _COMMON_PATH: "common"
     _ARCH: "cascadelake"
+    _MACHINE_TYPE: "c2-standard-16"
+    #_ARCH: "broadwell"
+    #_MACHINE_TYPE: "n1-standard-32"
 
 timeout : 28800s
