--- a/singularity/env/spack.yaml
+++ b/singularity/env/spack.yaml
@@ -8,7 +8,6 @@ spack:
   specs:
   - singularity
   - openmpi
-
    
   packages:
     all:
@@ -20,31 +19,66 @@ spack:
           - openmpi
 
       target:
-      - x86_64
+      - @ARCH@
 
+    autoconf:
+      buildable: false
+      externals:
+      - spec: autoconf@2.69
+        prefix: /usr
+    automake:
+      buildable: false
+      externals:
+      - spec: automake@1.13.4
+        prefix: /usr
+    bison:
+      buildable: false
+      externals:
+      - spec: bison@3.0.4
+        prefix: /usr
+    boost: 
+      buildable: true
+      version: 
+      - 1.68.0
     cuda:
       buildable: false
       externals:
       - spec: cuda@11.2.152
         prefix: /usr/local/cuda
-
+    libevent:
+      buildable: false
+      externals:
+      - spec: libevent@2.0.21
+        prefix: /usr
+    m4: 
+      buildable: true
+      version: 
+      - 1.4.17
+    ncurses:
+      buildable: false
+      externals:
+      - spec: ncurses@5.9
+        prefix: /usr
     openmpi:
       buildable: true
       version: 
       - 4.0.5
       variants: +singularity +cxx +cxx_exceptions +legacylaunchers +memchecker +pmi +static+vt +wrapper-rpath fabrics=auto schedulers=slurm
-
     singularity: 
       buildable: true
       version: 
       - 3.7.4
-
     slurm:
       buildable: false
       version: [20-11]
       externals:
       - spec: slurm@20-11
         prefix: /usr/local
+    valgrind:
+      buildable: false
+      externals:
+      - spec: valgrind@3.15.0+boost~mpi+only64bit
+        prefix: /usr
 
 
   
