--- a/wrf/env/spack.yaml
+++ b/wrf/env/spack.yaml
@@ -44,6 +44,7 @@ spack:
       buildable: false
       externals:
       - spec: cuda@11.2.152
+        prefix: /usr/local/cuda
     libevent:
       buildable: false
       externals:
