--- a/fluid-cicb/cloudbuild.yaml
+++ b/fluid-cicb/cloudbuild.yaml
@@ -18,6 +18,7 @@ steps:
         "-var","compiler=${_COMPILER}",
         "-var","pkg_path=${_PKG_PATH}",
         "-var","common_path=${_COMMON_PATH}",
+        "-var","workspace=${_WORKSPACE}",
         '${_PKG_PATH}/packer.json']
   waitFor: ["-"]
 
@@ -27,8 +28,9 @@ substitutions:
     _SUBNETWORK: 'default'
     _SOURCE_IMAGE_FAMILY: 'fluid-slurm-gcp-centos-7-v3'
     _SOURCE_IMAGE_PROJECT: 'fluid-cluster-ops'
-    _IMAGE_NAME: 'fluid-cicb-gcp-foss-latest'
-    _IMAGE_FAMILY: 'fluid-cicb-gcp-foss'
+    _IMAGE_NAME: 'fluid-cicb-latest'
+    _IMAGE_FAMILY: 'fluid-cicb'
+    _WORKSPACE: '/apps/workspace'
     _INSTALL_ROOT: '/opt'
     _SLURM_ROOT: '/usr/local'
     _COMPILER: 'gcc@9.2.0'
