--- a/self/env/spack.yaml
+++ b/self/env/spack.yaml
@@ -6,11 +6,10 @@ spack:
   concretization: separately
 
   specs:
-  - hdf5@1.10.7 +fortran +cxx +mpi
+  - cmake@3.18.4
+  - hdf5@1.12.0+cxx+fortran~mpi
   - hohqmesh@v1.0.1
 
-
-   
   packages:
     all:
       compiler:
