--- a/openfoam/cloudbuild.yaml
+++ b/openfoam/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
         "-var","install_root=${_INSTALL_ROOT}",
         "-var","machine_type=${_MACHINE_TYPE}",
         "-var","slurm_root=${_SLURM_ROOT}",
-        "-var","target_arch=${_ARCH}",
+        "-var","target_arch=${_TARGET_ARCH}",
         "-var","compiler=${_COMPILER}",
         "-var","pkg_path=${_PKG_PATH}",
         "-var","common_path=${_COMMON_PATH}",
@@ -35,7 +35,7 @@ substitutions:
     _COMPILER: 'intel-oneapi-compilers'
     _PKG_PATH: "openfoam"
     _COMMON_PATH: "common"
-    _ARCH: "cascadelake"
+    _TARGET_ARCH: "cascadelake"
     _ENV_FILE: "env/spack.yaml"
     _MACHINE_TYPE: "n1-standard-16"
 
