--- a/self/env/spack.yaml
+++ b/self/env/spack.yaml
@@ -9,6 +9,8 @@ spack:
   - cmake@3.18.4
   - hdf5@1.12.0+cxx+fortran~mpi
   - hohqmesh@v1.0.1
+  - flap@master
+  - feq-parse@1.0.2
 
   packages:
     all:
